# DataMigration

./: .gitignore  eslint.config.js  package-lock.json  package.json  vitest.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  export.rs  import.rs  lib.rs  main.rs  session.rs
src/ai/: AIPanel.test.tsx  AIPanel.tsx  aiClient.test.ts  aiClient.ts  commandSchema.test.ts  commandSchema.ts  mapCommand.test.ts  mapCommand.ts
src/core/: id.ts  log.test.ts  log.ts  updater.test.ts  updater.ts
src/data/: ColumnStore.test.ts  ColumnStore.ts  types.test.ts  types.ts
src/grid/: DataGrid.tsx  Minimap.tsx  RowDeleteConfirm.tsx
src/io/: exportFile.test.ts  exportFile.ts  importFile.test.ts  importFile.ts  session.test.ts  session.ts
src/ops/: applyOperation.test.ts  applyOperation.ts  diff.test.ts  diff.ts  formula.test.ts  formula.ts  history.test.ts  history.ts  join.test.ts  join.ts  operations.test.ts  operations.ts  transforms.test.ts  transforms.ts
src/ui/: MultiSelect.test.tsx  MultiSelect.tsx  Select.test.tsx  Select.tsx
src/view/: computeView.test.ts  computeView.ts  filter.test.ts  filter.ts  query.test.ts  query.ts  sourceInfo.test.ts  sourceInfo.ts  viewState.test.ts  viewState.ts
src/views/: ColumnMenu.tsx  ColumnSettings.tsx  ColumnVisibility.tsx  CompareDialog.tsx  ConfirmDialog.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FormulaEditor.test.tsx  FormulaEditor.tsx  JoinDialog.test.tsx  (+26 more)
(+6 files in other folders)
